--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Welcome utsav sir </title>
     <style>
         body {
             display: flex;
@@ -64,9 +64,9 @@
 <body>
     <div class="landing-container">
         <div class="photo-container">
-            <img src="your-photo.jpg" alt="Photo" class="landing-photo">
+            <img src="PHOTO-2026-02-13-23-14-42.jpg" alt="Photo" class="landing-photo">
         </div>
-        <button class="click-me-button" onclick="window.location.href='photo.html'">Click Me</button>
+        <button class="click-me-button" onclick="window.location.href='photo.html'">Click me </button>
     </div>
 </body>
 </html>
