--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
         <h1 class="hello-text" id="helloText">Hello Utsav! 💕</h1>
         <button class="click-me-button" id="clickMeBtn" onclick="showPhoto()">Click me</button>
-        <button class="next-button" id="nextBtn" onclick="window.location.href='index.html'">again click here </button>
+        <button class="next-button" id="nextBtn" onclick="window.location.href='photo.html'">again click here </button>
     </div>
 
     <script>
